...
    <TelaBase>
    <FormularioProduto
      valores={valores}
      aoMudar={setValores}
      erros={erros}
      categoriasExistentes={categorias}
      tituloCabecalho="Novo produto"
      tituloAcao="Adicionar à despensa"
      autofocarNome
      aoSalvar={salvar}
      salvando={salvando}
      avisoDeNome={
        duplicado
          ? {
...
